--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,12 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
     color: var(--white);
     font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    transition: opacity 0.3s;
+}
+
+.logo:hover {
+    opacity: 0.9;
 }
 
 .logo img {
